fix: header is too short

--- a/src/components/app/Header/index.css
+++ b/src/components/app/Header/index.css
@@ -9,7 +9,7 @@
   box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.2);
   background-color: rgba(255, 255, 255, 0.75);
   z-index: 199;
-  height: 54px;
+  height: 58px;
 }
 
 .Header-Menu-Wrap {
